# QPyTorch

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  develop.sh  requirements.txt  setup.py  test.py
docs/: Makefile  make.bat
docs/source/: .#qtorch.rst  auto_low.rst  conf.py  index.rst  optim.rst  qtorch.rst  quant.rst
example/: Functionality-Overview.ipynb  auto_low.py  binaryconnect.py  block_example.sh  example.sh  fixed_baseline.sh  half.sh  test.sh  train.py  utils.py
example/fixed_baseline/: no_quant_baseline.sh
example/half_baseline/: bfloat.sh  half.sh  half_simulate.sh  pytorch_half.sh  single.sh
example/lp_baseline/: block_example.sh
example/models/: __init__.py  auto_low.py  preresnet_low.py  testmodel.py  vgg_low.py
examples/: CIFAR10_Low_Precision_Training_Example.ipynb  Low_Precision_Quick_Intro.ipynb  binaryconnect.py  data.py  example.sh  torch-mlir_experiment.py  train.py
playground/: CMakeLists.txt  playground.cpp
qtorch/: __init__.py  developer_setup.sh  number.py  old_code.py  posit_activation.py  qtorch.py  quant_kernel.cu  quant_module.py
qtorch/quant/quant_cpu/: ._quant_cpu.cpp  CMakeLists.txt  Untitled.ipynb  bit_helper.cpp  quant.cpp  quant_cpu.cpp  quant_cpu.h  setup.py  sim_helper.cpp  simple.py
src/: extract_exponent.cu  qtorch.py  quant.cu  quant.h  quant_cuda.cpp  quant_kernel.cu  setup.py
test/: Benchmarking.ipynb  test_autolow.py  test_backward.py  test_block_exponent.py  test_clamp.py  test_device.py  test_function_stochastic.py  test_half.py  test_random.py  test_relation.py  test_stochastic.py
(+102 files in other folders)
